[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = "aoc 2024"
authors = ["thif <thif@equinor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
